[package]
name = "ili9341"
version = "0.3.0"
description = "A platform agnostic driver to interface with the ILI9341 (ald ILI9340C) TFT LCD display"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded-hal-driver", "display", "LCD"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yuri91/ili9341-rs"
edition = "2018"


[dependencies]
display-interface = "0.4"
embedded-hal = "0.2.3"

[dependencies.embedded-graphics]
git = "https://github.com/jamwaffles/embedded-graphics.git"
optional = true
rev = "868060de9ef116be3ba20841b871581e2d398307"

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
