[package]
name = "ili9341"
version = "0.5.0"
description = "A platform agnostic driver to interface with the ILI9341 (ald ILI9340C) TFT LCD display"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded-hal-driver", "display", "LCD"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yuri91/ili9341-rs"
edition = "2018"


[dependencies]
display-interface = "0.4.1"
embedded-hal = "0.2.5"

[dependencies.embedded-graphics-core]
optional = true
version = "0.3"


[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]

